[package]
name = "fixed-size-buf-arena"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam = "0.8.1"
par-stream = { version = "0.5.1", features = ["runtime-async-std"] }
tokio = { version = "1.11.0", features = ["sync"] }

[dev-dependencies]
rand = "0.8.4"
tokio = { version = "1.11.0", features = ["macros", "rt-multi-thread"] }
async-std = { version = "1.10.0", features = ["attributes"] }
futures = "0.3.17"

[profile.release]
debug = true
